tests/paczka1/fuzzy1/94200556.err
Error in line 6: zf03vH4o S576 -1,9
Error in line 3: h31 S576 20,5
Error in line 10: h31 S644 9,0
Error in line 19: zf03vH4o S576 417,2
Error in line 37: AeJhrWRia S55 4,2
